--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-inner-image-zoom": "^4.0.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.1",
     "react-slick": "^0.30.3",
